openwebui/base/openwebui/immutable-cache.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immutable-cache
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "public, max-age=2592000, immutable"
