openwebui/base/openwebui/no-store.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-store
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "no-store"
